# wasm-shm-test

./: .gitignore  .gitmodules  DESIGN.md  Makefile  README.md
examples/: Cargo.toml
examples/complex/consumer/: Cargo.toml
examples/complex/consumer/src/: lib.rs
examples/complex/publisher/: Cargo.toml
examples/complex/publisher/src/: lib.rs
examples/complex/starter/: .gitignore  Cargo.toml  build-wasm.sh  build-wasm2.sh  build.rs  consumer.wasm  publisher.wasm
examples/complex/starter/src/: main.rs
examples/complex/wit/: complex.wit
examples/minimal/impl/: .cargo  Cargo.toml
examples/minimal/impl/src/: lib.rs
examples/minimal/main/: Cargo.toml
examples/minimal/main/src/: main.rs
impl/: Cargo.toml
impl/src/: host_shm.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
runtime/: .gitignore  Cargo.toml  build.sh  implementation.wasm  main.wasm
runtime/src/: main.rs
symmetric/: .gitignore  Cargo.toml  build-wasi.sh  subscriber.wasm
symmetric/rust-client/: Cargo.toml  generate.sh
symmetric/rust-client/src/: client.rs  client_symmetric.rs  client_wasm.rs  lib.rs
symmetric/src/: lib.rs
symmetric/test/publisher/: Cargo.toml
symmetric/test/publisher/src/: lib.rs
symmetric/test/subscriber/: .gitignore  Cargo.toml
symmetric/test/subscriber/src/: main.rs
symmetric/wasi-clocks/: Cargo.toml  generate.sh
symmetric/wasi-clocks/import/: Cargo.toml
symmetric/wasi-clocks/import/src/: imports.rs  imports_symmetric.rs  imports_wasm.rs  lib.rs
symmetric/wasi-clocks/src/: exports.rs  lib.rs
symmetric/wasi-clocks/wit/: export.wit  monotonic-clock.wit  system-clock.wit  timezone.wit  types.wit  wall-clock.wit  world.wit
wit/: shm.wit
