[workspace]
resolver = "3"
members = ["complex/consumer", "complex/publisher", "complex/starter", "minimal/main", "minimal/impl"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasm-shm = { path = "../pub-sub/rust-client", default-features = false }
wit-bindgen = { path = "../wit-bindgen/crates/symmetric_executor/bindgen", package = "mini-bindgen", default-features = false, features = [ "async" ] }
symmetric_executor = { path = "../wit-bindgen/crates/symmetric_executor" }
symmetric_stream = { path = "../wit-bindgen/crates/symmetric_executor/symmetric_stream" }
wasi-clocks-symmetric = { path = "../pub-sub/wasi-clocks" }
futures = "0.3.31"
flat = { version = "0.1.0", path = "../flat-types-rust" }
wasi-clocks = { path = "../pub-sub/wasi-clocks/import", default-features = false }
