[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
libc = "0.2.166"
tokio = "1.47.1"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-43.0.0" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-43.0.0", features = ["p3"] }
wasmtime-wasi-io = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-43.0.0" }
