[package]
name = "symmetric-sharedmem"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
symmetric_executor = { version = "0.1.0", path = "../../wit-bindgen/crates/symmetric_executor" }
symmetric_stream = { version = "0.1.0", path = "../../wit-bindgen/crates/symmetric_executor/symmetric_stream" }
wit-bindgen = { path = "../../wit-bindgen/crates/symmetric_executor/dummy-bindgen", package = "mini-bindgen" }

[lib]
crate-type = ["cdylib"]
