[workspace]
resolver = "3"
members = ["rust-client", "wasi-clocks", "test/publisher", "test/subscriber", "wasi-clocks/import" ]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
symmetric_executor = { path = "../wit-bindgen/crates/symmetric_executor" }
symmetric_stream = { path = "../wit-bindgen/crates/symmetric_executor/symmetric_stream" }
wit-bindgen = { path = "../wit-bindgen/crates/symmetric_executor/bindgen", package = "mini-bindgen", default-features=false, features=["async"] }
futures = "0.3.31"

[package]
name = "symmetric-sharedmem"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
symmetric_executor = { workspace = true, optional = true }
symmetric_stream = { workspace = true, optional = true }
wit-bindgen = { workspace = true }

[lib]
crate-type = [ "cdylib" ]

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "wit-bindgen/symmetric" ]
canonical = [ "wit-bindgen/canonical" ]
