[package]
name = "wasm-shm"
version.workspace = true
edition.workspace = true

[dependencies]
symmetric-sharedmem = { path = "..", optional = true }
wit-bindgen = { workspace = true }

[features]
default = [ "symmetric" ]
symmetric = [ "wit-bindgen/symmetric", "dep:symmetric-sharedmem" ]
canonical = [ "wit-bindgen/canonical" ]
