[package]
name = "wasi-clocks-symmetric"
version = "0.1.0"
edition = "2021"

[dependencies]
symmetric_executor = { path = "../../../wit-bindgen/crates/symmetric_executor" }
symmetric_stream = { path = "../../../wit-bindgen/crates/symmetric_executor/symmetric_stream" }
wit-bindgen = { path = "../../../wit-bindgen/crates/symmetric_executor/dummy-bindgen", package = "mini-bindgen" }

[lib]
crate-type = ["cdylib"]
