[package]
name = "wasi-clocks-symmetric"
version = "0.1.0"
edition = "2021"

[dependencies]
symmetric_executor = { path = "../../wit-bindgen/crates/symmetric_executor", optional=true }
symmetric_stream = { path = "../../wit-bindgen/crates/symmetric_executor/symmetric_stream", optional=true }
wit-bindgen = { path = "../../wit-bindgen/crates/symmetric_executor/bindgen", package = "mini-bindgen", default-features=false, features=["async"] }

[lib]
crate-type = ["cdylib"]

[features]
default = [ "symmetric" ]
symmetric = [ "wit-bindgen/symmetric", "dep:symmetric_executor", "dep:symmetric_stream" ]
canonical = [ "wit-bindgen/canonical" ]
