[package]
name = "wasi-clocks-symmetric"
version.workspace = true
edition.workspace = true

[dependencies]
symmetric_executor = { workspace = true, optional=true }
symmetric_stream = { workspace = true, optional=true }
wit-bindgen = { workspace = true}

[lib]
crate-type = ["cdylib"]

[features]
default = [ "symmetric" ]
symmetric = [ "wit-bindgen/symmetric", "dep:symmetric_executor", "dep:symmetric_stream" ]
canonical = [ "wit-bindgen/canonical" ]
