[package]
name = "consumer"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-shm = { workspace = true }
wit-bindgen = { workspace = true }
symmetric_executor = { workspace = true, optional=true }
symmetric_stream = { workspace = true, optional=true }
wasi-clocks-symmetric = { workspace = true, optional=true }
futures.workspace = true
flat = { workspace = true }
publisher_link = { package = "publisher", path = "../publisher", optional = true, default-features = false }

[lib]
crate-type = [ "cdylib" ]

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "dep:wasi-clocks-symmetric", "wit-bindgen/symmetric", "wasm-shm/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical" ]
combined = [ "canonical", "publisher_link/canonical" ]
