[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-shm = { path = "../../../symmetric/rust-client", default-features = false }
wit-bindgen = { path = "../../../wit-bindgen/crates/symmetric_executor/dummy-bindgen", package = "mini-bindgen", default-features = false, features = [ "async" ] }
symmetric_executor = { path = "../../../wit-bindgen/crates/symmetric_executor", optional=true }
symmetric_stream = { path = "../../../wit-bindgen/crates/symmetric_executor/symmetric_stream", optional=true }
wasi-clocks-symmetric = { path = "../../../symmetric/wasi-clocks", optional=true }
futures = "0.3.31"
flat = { version = "0.1.0", path = "../../../flat-types-rust" }

[lib]
crate-type = [ "cdylib" ]

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "dep:wasi-clocks-symmetric", "wit-bindgen/symmetric", "wasm-shm/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical" ]
