[package]
name = "publisher"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-shm = { workspace = true }
wit-bindgen = { workspace = true }
symmetric_executor = { workspace = true, optional=true }
symmetric_stream = { workspace = true, optional=true }
wasi-clocks-symmetric = { workspace = true, optional=true }
futures = "0.3.31"
flat = { workspace = true }
wasi-clocks = { workspace = true }

[lib]
# rlib is only needed for the "combined" feature of consumer
crate-type = [ "rlib", "cdylib" ]

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "dep:wasi-clocks-symmetric", "wit-bindgen/symmetric", "wasm-shm/symmetric", "wasi-clocks/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical", "wasi-clocks/canonical" ]
