[package]
name = "starter"
version = "0.1.0"
edition = "2024"

[dependencies]
publisher = { path = "../publisher", default-features = false, optional = true }
consumer = { path = "../consumer", default-features = false, optional = true }
wasm-shm = { path = "../../../pub-sub/rust-client", default-features = false }
wit-bindgen = { path = "../../../wit-bindgen/crates/symmetric_executor/bindgen", package = "mini-bindgen", default-features = false, features = [ "async" ] }
symmetric_executor = { path = "../../../wit-bindgen/crates/symmetric_executor", optional=true }
symmetric_stream = { path = "../../../wit-bindgen/crates/symmetric_executor/symmetric_stream", optional=true }
wasi-clocks-symmetric = { path = "../../../pub-sub/wasi-clocks", optional=true }

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "dep:wasi-clocks-symmetric", "wit-bindgen/symmetric", "wasm-shm/symmetric", "publisher/symmetric", "consumer/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical" ]
