[package]
name = "starter"
version.workspace = true
edition.workspace = true

[dependencies]
publisher = { path = "../publisher", default-features = false, optional = true }
consumer = { path = "../consumer", default-features = false, optional = true }
wasm-shm = { workspace = true }
wit-bindgen = { workspace = true }
symmetric_executor = { workspace = true, optional=true }
symmetric_stream = { workspace = true, optional=true }
wasi-clocks-symmetric = { workspace = true, optional=true }

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "dep:wasi-clocks-symmetric", "wit-bindgen/symmetric", "wasm-shm/symmetric", "publisher/symmetric", "consumer/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical" ]
