[package]
name = "publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
symmetric_executor = { path = "../../../../wit-bindgen/crates/symmetric_executor" }
wasi-clocks = { path = "../../wasi-clocks/import" }
wasm-shm = { path = "../../rust-client" }
wit-bindgen = { path = "../../../../wit-bindgen/crates/symmetric_executor/dummy-bindgen", package = "mini-bindgen" }
