[package]
name = "publisher"
version.workspace = true
edition.workspace = true

[dependencies]
symmetric_executor = { workspace = true, optional=true }
wasi-clocks = { path = "../../wasi-clocks/import", default-features = false }
wasm-shm = { path = "../../rust-client", default-features = false }
wit-bindgen = { workspace = true }

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "wit-bindgen/symmetric", "wasm-shm/symmetric", "wasi-clocks/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical", "wasi-clocks/canonical" ]
