[package]
name = "subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
publisher = { path = "../publisher" }
wasm-shm = { path = "../../rust-client" }
wit-bindgen = { path = "../../../../wit-bindgen/crates/symmetric_executor/dummy-bindgen", package = "mini-bindgen" }
symmetric_executor = { path = "../../../../wit-bindgen/crates/symmetric_executor" }
symmetric_stream = { path = "../../../../wit-bindgen/crates/symmetric_executor/symmetric_stream" }
wasi-clocks-symmetric = { path = "../../wasi-clocks" }
futures = "0.3.31"
