[package]
name = "subscriber"
version.workspace = true
edition.workspace = true

[dependencies]
publisher = { path = "../publisher", default-features = false }
wasm-shm = { path = "../../rust-client", default-features = false }
wit-bindgen = { workspace = true }
symmetric_executor = { workspace = true, optional=true }
symmetric_stream = { workspace = true, optional=true }
wasi-clocks-symmetric = { path = "../../wasi-clocks", optional=true }
futures.workspace = true

[features]
default = [ "symmetric" ]
symmetric = [ "dep:symmetric_executor", "dep:symmetric_stream", "dep:wasi-clocks-symmetric", "wit-bindgen/symmetric", "wasm-shm/symmetric", "publisher/symmetric" ]
canonical = [ "wit-bindgen/canonical", "wasm-shm/canonical", "publisher/canonical" ]
